fix wrong alignment of header when there are multiple tweets on screen

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,7 +8,7 @@ header {
     justify-content: center;
     align-items: center;
     margin-left: 50px;
-
+    margin-top: 50px;
 }
 
 @media only screen and (max-width: 1023px) {
@@ -17,6 +17,7 @@ header {
       height: 400px;
       width: 100%;
       margin-left: 0px;
+      margin-top: 0px;
     }
   
   }
