--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -22,7 +22,7 @@ body {
   padding-top: 120px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   
 }
 
